# path-pipe

./: Makefile  Pipeline.hs  notes.txt  part2.txt  taxonomy.py
PipelineHS/: Lib.hs  path-pipe-hs.cabal
PipelineHS/src/: Config.hs
