name:                 path-pipe-hs
version:              0.1.0.0
synopsis:             Pathogen discovery pipeline 
-- description:
-- license:
-- license-file:
homepage:             github.com/VDBWRAIR
author:               Michael Panciera
maintainer:           michael.panciera.work@gmail.com
category:             Development
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable path-pipe-hs
  main-is:              Lib.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , shake
                      , temporary
                      , directory
                      , biofastq
                      , biocore
                      , bytestring
                      , compressed
  hs-source-dirs:       src
  default-language:     Haskell2010
